<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mercury Messenger</string>
    <string name="action_new_message">New Message</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="hello_world">Hello world!</string>
    <string name="contact_image_desc">Image preview of contact</string>
    <string name="new_message_title">New Message</string>
    <string name="new_message_contacts_hint">Enter recipient</string>
    <string name="new_message_text_hint">Enter message</string>
    <string name="add_recipient_image_desc">Add recipient</string>
    <string name="send_message_image_desc">Send message</string>
    <string name="view_message_title">View message</string>
    <string name="sms_message_settings_title">SMS Message Settings</string>
    <string name="sms_propagation_chk_bx">Allow SMS message propagation</string>
    <string name="settings_title">App Settings</string>
    <string name="message_search_hint">Search for message</string>
    <string name="search_activity_title">Message Search Results</string>
    <string name="action_reply">Reply</string>
    <string name="action_forward">Forward</string>
    <string name="action_delete">Delete</string>
    <string name="self_reference">Me</string>
    <string name="delete_msg_confirmation">Are you sure you want to delete this message?</string>
    <string name="acknowlege_descision">OK</string>
    <string name="decline_desicion">Cancel</string>
    <string name="reply_toast">Reply</string>
    <string name="forward_toast">Forward</string>
    <string name="delete_toast">Deleting</string>
    <string name="message_length_error">Message length is limited to %s characters.</string>
    <string name="text_ratio">%1$d/%2$d</string>
    <string name="message_recevied_notification">New message from: %s</string>
    <string name="sms_sending_scheduled_message">Sending scheduled message&#8230;</string>
    <string name="sms_message_sent">Message sent.</string>
    <string name="sms_send_failed">Failed to send message.</string>
    <string name="sms_no_service">Failed to send message because no service.</string>
    <string name="sms_no_signal">Failed to send message because no signal.</string>
    <string name="sms_delivered">Message delivered.</string>
    <string name="sms_not_delivered">Failed to deliver message.</string>
    <string name="date_time_format">MM/dd/yyyy h:mm:ss a</string>
    <string name="action_sched_messages">Scheduled Messages</string>
    <string name="action_conversation_list">Conversations</string>
    <string name="scheduled_message_title">Scheduled Messages</string>
    <string name="schedule_message_title">Schedule Message</string>
    <string name="set_decision">Set</string>
    <string name="date_label">Date:</string>
    <string name="time_label">Time:</string>
    <string name="date_format">MM/dd/yyyy</string>
    <string name="time_format">h:mm a</string>
    <string name="date_time_format2">MM/dd/yyyy h:mm a</string>
    <string name="schedule_checkbox_label">Schedule:</string>
    <string name="schedule_date_checkbox_label">Schedule: %s</string>
    <string name="scheduled_label">Scheduled: %s</string>
    <string name="to_label">To: %s</string>
	<string name="error_date_in_past">Error: Date in the past.</string>
	<string name="sending">Sending&#8230;</string>
	<string name="failed">Failed.</string>
	<string name="action_add_to_contacts">Add to contacts</string>
	<string name="action_call">Call: %s</string>
	<string name="action_delete_conversation">Delete conversation</string>
	<string name="action_delete_message">Delete message</string>
	<string name="vibration_short_timer">25</string>
	<string name="invalid_recipient_error">Error: Invalid recipient.</string>
</resources>