<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@color/backroundColor" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <AutoCompleteTextView
            android:id="@+id/newMsgRecipientAutoCompleteTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:ems="8"
            android:hint="@string/new_message_contacts_hint" >

            <requestFocus />
        </AutoCompleteTextView>

        <ImageButton
            android:id="@+id/newMsgAddRecipientImageButton"
            style="@style/ButtonStyle"
            android:contentDescription="@string/add_recipient_image_desc"
            android:src="@drawable/hg_new_contact" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="match_parent" >

        <EditText
            android:id="@+id/newMsgTextEditText"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="2"
            android:ems="8"
            android:gravity="top"
            android:hint="@string/new_message_text_hint"
            android:minLines="5" />

        <ImageButton
            android:id="@+id/newMsgSendImageButton"
            style="@style/ButtonStyle"
            android:contentDescription="@string/send_message_image_desc"
            android:src="@drawable/send_msg_icon" />
    </TableRow>

    <TextView
        android:id="@+id/msgCharCountTextView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:paddingRight="3sp"
        android:text="TextView"
        android:textSize="12sp" />

</TableLayout>